# py-gforms

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
src/gforms/: __init__.py  auth.py  config.py  core.py
tests/: __init__.py  test_auth_unittest.py  test_core.py
